--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,5 +1,6 @@
 .statistics {
-  width: 400px;
+  width: 90%;
+  max-width: 400px;
   margin-top: 50px;
   text-align: center;
   color: rgba(0, 0, 0, 0.626);
